--- a/views/messages/index.pug
+++ b/views/messages/index.pug
@@ -7,7 +7,7 @@ block content
         if unknownError
             p(class="text-red-500") Unexpected Error: #{errors.unknown}
         form(method="post")
-            div(class="flex-col my-4 mx-auto border-b-slate-700")
+            div(class="flex-col my-4 mx-auto")
                 div(class="mb-2")
                     label Title
                 div
@@ -22,7 +22,7 @@ block content
                 div
                     - var messageError = errors?.message ?? false;
                     - var message = values?.message ?? ""
-                    textarea(class=(titleError) ? 'border-2 border-red-500 rounded-md w-96 min-h-72 p-2 bg-slate-100 dark:bg-slate-500' : 'rounded-md w-96 min-h-72 p-2 bg-slate-100 dark:bg-slate-500' name="message") #{message}
+                    textarea(class=(messageError) ? 'border-2 border-red-500 rounded-md w-96 min-h-72 p-2 bg-slate-100 dark:bg-slate-500' : 'rounded-md w-96 min-h-72 p-2 bg-slate-100 dark:bg-slate-500' name="message") #{message}
                     if messageError
                         p(class="text-red-500") #{errors.message}
             div
@@ -31,7 +31,7 @@ block content
             h1(class="text-3xl mb-4") Messages
             if messages && messages.length > 0
                 - for(let message of messages)
-                    div(class="p-2 flex grow odd:bg-slate-300 dark:odd:bg-slate-700")
+                    div(class="p-2 flex grow odd:bg-slate-300 even:bg-slate-400 dark:odd:bg-slate-900 dark:even:bg-slate-700")
                         h1(class="text-2xl grow") #{message.title}
                         a(class="p-2 m-2 bg-cyan-700 text-white hover:bg-cyan-800 rounded-md shadow-sm" href="/messages/"+message.id) View
             else
